# lingq-upload

./: .gitignore  .prettierrc  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  deny.toml  package.json  playwright.config.ts  release-please-config.json  svelte.config.js
.github/workflows/: ci.yml  lingq-canary.yml  release-please.yml  release.yml
docs/: ci-design.md  dev-setup.md  glossary.md
docs/architecture/: decisions.md
docs/specs/: calibre-opf.md  (+5 more)
e2e/: always-confirm.spec.ts  chapter-skip.spec.ts  cover-header.spec.ts  happy_path.spec.ts  invisible-resume.spec.ts  library-keyboard.spec.ts  mapping-buckets.spec.ts  mapping-diff.spec.ts  mapping-editor.spec.ts  mapping-inspector.spec.ts  mapping-rebalance.spec.ts  mapping-remove.spec.ts  mapping-strategy.spec.ts  match-navigation.spec.ts  match-resolve-to-grid.spec.ts  picker.spec.ts  run-cancel.spec.ts  smoke.spec.ts
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: audio.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_bindings.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio_scheme.rs  error.rs  events.rs  lib.rs  main.rs  secrets.rs
src-tauri/src/codecs/: mod.rs  mp3_encoder.rs  mp4_chapters.rs  pcm.rs  silence.rs  symphonia_impl.rs
src-tauri/src/commands/: add_project.rs  demo.rs  files.rs  ingest.rs  jobs.rs  library.rs  lingq.rs  mapping.rs  matcher.rs  mod.rs  ping.rs  project.rs  secrets.rs  upload.rs
src-tauri/src/core/: audio.rs  identity.rs  mod.rs  project.rs  text.rs
src-tauri/src/core/audio/: batch.rs  carver.rs  mod.rs  probe.rs  track.rs
src-tauri/src/core/epub/: body.rs  cover.rs  detect.rs  kindle.rs  kobo.rs  mod.rs  parse.rs  toc.rs
src-tauri/src/core/job/: mod.rs
src-tauri/src/core/lesson/: mod.rs  single.rs
src-tauri/src/core/matcher/: mismatch.rs  mod.rs  ops.rs  pack.rs
src-tauri/src/core/queue/: mod.rs
src-tauri/src/core/store/: json.rs  memory.rs  mod.rs
src-tauri/src/core/text/: mod.rs  ruby.rs
src-tauri/src/ingest/: manual.rs  mod.rs
src-tauri/src/ingest/calibre/: lang.rs  mod.rs  opf.rs
src-tauri/src/ingest/libation/: mod.rs  sidecar.rs
src-tauri/src/lingq/: client.rs  collections.rs  error.rs  import.rs  lang.rs  lessons.rs  mod.rs
src-tauri/tests/: add_project_test.rs  audio_golden.rs  bindings.rs  calibre_source_test.rs  cancel_cleanup_test.rs  cancel_command_test.rs  carver_absorb_test.rs  cmd_apply_mapping_op_test.rs  cmd_chapter_text_test.rs  cmd_set_cover_test.rs  cmd_set_selection_test.rs  cover_chapter_filter_test.rs  cover_extract_test.rs  epub_kindle_regression.rs  epub_kobo_parse.rs  epub_namespaced_opf_test.rs  epub_vendor_detect.rs  identity_test.rs  ingest_manual_test.rs  job_orchestrator_test.rs  kafka_snapshot_test.rs  lang_threading_test.rs  libation_source_test.rs  library_v2_test.rs  lingq_client_test.rs  lingq_collections_test.rs  lingq_cover_upload_test.rs  lingq_import_test.rs  lingq_lessons_test.rs  m4b_chapter_integration_test.rs  manual_lingq_smoke.rs  mapping_contract_test.rs  mapping_editor_ops.rs  matcher_test.rs  project_load_test.rs  queue_resume_test.rs  reconcile_test.rs  ruby_test.rs  selection_contract_test.rs  single_lesson_proptest.rs  (+5 more)
src-tauri/tests/fixtures/audio/: silence.golden.json  sine_30s.golden.md5  synth_chapters_generic.m4b  synth_chapters_intro.m4b  synth_chapters_narrative.m4b
src-tauri/tests/fixtures/audio/silence_corpus/: clip_a.golden_offsets.json  clip_b.golden_offsets.json  clip_c.golden_offsets.json
src-tauri/tests/fixtures/epub/: README.md
src-tauri/tests/fixtures/epub-covers/: build.sh  epub2-meta-cover.epub  epub3-properties.epub  guide-xhtml-img.epub
src-tauri/tests/fixtures/epub/dialects/: expected.json
src-tauri/tests/fixtures/epub/kobo/: adversarial_mixed_classes.epub
src-tauri/tests/fixtures/ffmpeg/: slow_transcode.bat  slow_transcode.sh
src-tauri/tests/fixtures/lingq/cassettes/: api_profile_200.json  import_lesson_201.json  import_lesson_400.json  import_lesson_missing_id.json  list_collections_200.json  list_languages_200.json  whoami_200.json  whoami_401.json  whoami_404.json
src-tauri/tests/fixtures/matcher/: clean_pair.json  count_off_minus_two.json  count_off_plus_one.json  many_to_one.json  one_to_many.json  unalignable.json
src-tauri/tests/fixtures/projects/: baseline_no_selection.json
src-tauri/tests/snapshots/: epub_kindle_regression__kindle_synth_chapters.snap  epub_kobo_parse__kobo_synth_chapters.snap
src-tauri/tests/support/: mk_fixture.rs  mod.rs
src-tauri/tests/trybuild/: stage_not_interchangeable.rs  stage_not_interchangeable.stderr
(+50 files in other folders)
