[package]
name = "lingq-upload"
version = "0.1.0"
description = "Desktop app: import EPUB + audio into LingQ as language-learning courses."
edition = "2021"
default-run = "lingq-upload"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lingq_upload_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive", "uuid", "serde_json", "function", "chrono"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript", "derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
unicode-normalization = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
secrecy = { version = "0.10", features = ["serde"] }
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
quick-xml = { version = "0.36", features = ["serialize"] }
async-trait = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
percent-encoding = "2"
tokio-util = { version = "0.7", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
mockito = "1"
serde_json = "1"
tempfile = "3"
proptest = "1"
insta = { version = "1", features = ["json"] }
trybuild = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
